--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 attrs==23.2.0
 Django==4.2.11
+django-cors-headers==4.3.1
 django-rest-auth==0.9.5
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
